--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,29 +12,28 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - mongodb
+      - mongo
 
-  mongodb:
-    image: mongo:4.4.6-bionic
-    environment:
-      MONGO_INITDB_ROOT_USERNAME: ${MONGOUSER:-root}
-      MONGO_INITDB_ROOT_PASSWORD: ${MONGOPASSWORD:-password}
+  mongo:
+    container_name: mongodb
+    image: mongo:8.0.9
     ports:
-      - "27017:27017"
+      - 27017:27017
     volumes:
-      - mongodb_data_container:/data/db
+      - ./.docker/mongo-data/db:/data/db
+      - ./.docker/mongo-data/configdb:/data/configdb
+    command: mongod --replSet rs0
 
   mongo-express:
     image: mongo-express
     restart: always
     ports:
-      - "8081:8081"
+      - 8081:8081
     environment:
-      ME_CONFIG_MONGODB_ADMINUSERNAME: admin
-      ME_CONFIG_MONGODB_ADMINPASSWORD: admin
-      ME_CONFIG_MONGODB_URL: mongodb://${MONGOUSER:-root}:${MONGOPASSWORD:-password}@mongodb:27017/
-    depends_on:
-      - mongodb
+      ME_CONFIG_MONGODB_ADMINUSERNAME: root
+      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+      ME_CONFIG_BASICAUTH: false
 
 volumes:
   mongodb_data_container:
