--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,15 +6,16 @@ authors = ["Your Name <you@example.com>"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
-python = "^3.9"
-bcrypt = "^4.0.1"
-python-jose = "^3.3.0"
-pydantic= {extras = ["email"], version = "^1.10.4"}
-fastapi = "^0.95.2"
-uvicorn= {extras = ["standard"], version = "^0.20.0"}
-python-multipart = "^0.0.6"
-pymongo = {extras = ["srv"], version = "^4.3.3"}
-orjson = "^3.9.1"
+python = "^3.12"
+bcrypt = "^4.3"
+python-jose = "^3.5"
+pydantic= {extras = ["email"], version = "^2.11"}
+fastapi = "^0.115"
+uvicorn= {extras = ["standard"], version = "^0.34"}
+python-multipart = "*"
+pymongo = {extras = ["srv"], version = "^4.13"}
+orjson = "^3.10"
+pydantic-settings = "^2.9.1"
 
 
 [tool.poetry.group.dev.dependencies]
