build: :heavy_plus_sign: Add httpx for whatsapp requests

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ python-multipart = "*"
 pymongo = {extras = ["srv"], version = "^4.13"}
 orjson = "^3.10"
 pydantic-settings = "^2.9.1"
+httpx = "^0.28.1"
 
 
 [tool.poetry.group.dev.dependencies]
